--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -7,103 +7,8 @@
         Entrar com Facebook
       
   .row
-    .large-12.medium-12.columns
-      %h1 Melhores Séries
-    .large-4.medium-4.columns
-      %div
-        %a{:href => ""}
-          .imageWrapper
-            = image_tag("1.jpg", :class => "image-item")
-            .box-description
-              .small-12.columns
-                %h4 
-                  Two Broke Girls
-                %ul.rating
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star-o
- 
-              .small-6.columns
-                %div
-                  %i.fa.fa-comment
-                  14 
-                  %span Reviews
-                
-              .small-6.columns    
-                %div
-                  %i.fa.fa-send
-                  153
-                  %span Recomendações
-    .large-4.medium-4.columns
-      %div
-        %a{:href => ""}
-          .imageWrapper
-            = image_tag("2.jpg", :class => "image-item")
-            .box-description
-              .small-12.columns
-                %h4 
-                  24 Horas
-                %ul.rating
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star-o
- 
-              .small-6.columns
-                %div
-                  %i.fa.fa-comment
-                  14 
-                  %span Reviews
-                
-              .small-6.columns    
-                %div
-                  %i.fa.fa-send
-                  153
-                  %span Recomendações
-    .large-4.medium-4.columns
-      %div
-        %a{:href => ""}
-          .imageWrapper
-            = image_tag("4.jpg", :class => "image-item")
-            .box-description
-              .small-12.columns
-                %h4 
-                  American Horror Story
-                %ul.rating
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star
-                  %li
-                    %i.fa.fa-star-o
- 
-              .small-6.columns
-                %div
-                  %i.fa.fa-comment
-                  14 
-                  %span Reviews
-                
-              .small-6.columns    
-                %div
-                  %i.fa.fa-send
-                  153
-                  %span Recomendações
+    = render "topshows"
+    = render "latestreviews"
+    
                                     
                   
