fixed search icon layout

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -88,7 +88,7 @@ header {
 /*==================================*/
 .opensearch {
   float: left;
-  .opensearch {
+  i {
     color: #fff;
     padding: 5px;
   }
