--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,10 +1,11 @@
 %section.main
   .homebanner
     .row
-      %h1 Lorem Ipsum Dolor Sit Amet
-      %h3 Suspendisse commodo ante laoreet sem iaculis posuere
-      %button.facebook-login
-        Entrar com Facebook      
+      .small-12.medium-6.columns
+        %h1 Lorem Ipsum Dolor Sit Amet
+        %h3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt nulla. Suspendisse in aliquet lacus. Mauris ut purus tincidunt massa bibendum pharetra.
+        %button.facebook-login
+          Entrar com Facebook      
   = render "latestreviews"
   = render "topshows"
   .row  
