--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -25,6 +25,7 @@ body {
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
+            font-family: 'Open Sans', sans-serif;
 }
 
 h2 { 
@@ -75,6 +76,7 @@ header {
   z-index: 10;
   img {
     height: 60px;
+    padding: 5px;
   }  
   ul {
     padding: 0px;
@@ -83,6 +85,7 @@ header {
     float: right;
     list-style: outside none inline;
     li {
+      line-height: 2;
       display: inline;
       padding: 10px;
       float: left;
@@ -123,18 +126,24 @@ input[type=search] {
 /*==================================*/
 
 .facebook-login {
-  font-family: "Open Sans",sans-serif;
+  
   background: #3477e5 none repeat scroll 0 0;
-  border: 0px;
+  border: 0 none;
   border-radius: 5px;
   color: white;
+  font-family: "Open Sans",sans-serif;
   font-size: 16px;
-  padding: 0px;
-  text-align: center;
+  height: 29px;
+  line-height: 26px;
   overflow: hidden;
-//  border-bottom: 3px solid darken( #3477e5, 20%);
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 10px;
+  text-align: center;
   text-overflow: ellipsis;
   white-space: nowrap;
+//  border-bottom: 3px solid darken( #3477e5, 20%);
+
   @include transition;
   &:hover {
     background: lighten( #3477e5, 5%);
@@ -147,7 +156,7 @@ input[type=search] {
     float: left;
     font-family: FontAwesome;
     margin: 0 7px 0 -5px;
-    padding: 5px 10px;
+    padding: 0px 6px 0px 14px;
     text-align: left;
   }  
 }
@@ -200,10 +209,20 @@ footer {
 
 .homebanner {
   background: image-url("home_banner.jpg") repeat fixed 0 0 / cover ;
-  height: 350px;
+  height: auto;
+  padding-bottom: 24px;
   box-shadow: 0 50px 100px 0 rgba(0,0,0,0.6) inset;
   .row { padding-top: 100px; }
-  h1, h3 { color: #fff; }
+  h1 { 
+    background: rgba(0, 0, 0, 0.3) none repeat scroll 0 0;
+    color: #fff;
+    display: table;
+    padding: 4px 12px;
+  }
+  h3 { 
+    font-weight: 100;
+    color: #fff;
+  }
 }
 
 .imageWrapper {
