--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,13 +11,13 @@
     #wrapper
       %header#fading
         .small-12.medium-3.columns
-          = link_to image_tag( 'logo.svg'), '/test'
+          = link_to image_tag( 'logo.svg'), '/'
         .small-12.medium-9.columns
           %ul.push-right
             %li
               %input{:name => "s", :results => "5", :type => "search", :placeholder => "Busca"}
             %li.hide-for-small-only
-              = link_to ( 'Todas as Séries'), '/test'
+              = link_to ( 'Todas as Séries'), '/allshows'
             %li
               %button.facebook-login.hide-for-small
                 Entrar com Facebook
