--- a/app/views/welcome/_topshows.html.haml
+++ b/app/views/welcome/_topshows.html.haml
@@ -37,6 +37,7 @@
     %div
       %a{:href => ""}
         .imageWrapper
+          %span.newepisodes
           = image_tag("2.jpg", :class => "image-item")
           .box-description
             .small-12.columns
