--- a/app/views/static/allshows.html.haml
+++ b/app/views/static/allshows.html.haml
@@ -3,7 +3,7 @@
     %h2 Todas as Séries
   .large-2.medium-4.columns
     %div
-      %a{:href => ""}
+      %a{:href => "singleshow"}
         .imageWrapper
           %span.newepisodes
           = image_tag("1.jpg", :class => "image-item")
