--- a/app/views/welcome/_topshows.html.haml
+++ b/app/views/welcome/_topshows.html.haml
@@ -3,7 +3,7 @@
     %h2 Melhores Séries
   .large-4.medium-4.columns
     %div
-      %a{:href => ""}
+      %a{:href => "singleshow"}
         .imageWrapper
           = image_tag("1.jpg", :class => "image-item")
           .box-description
@@ -195,4 +195,4 @@
                 153
                 %span Recomendações   
   .small-12.columns                         
-    = link_to ( 'Ver todos'), '#', :class => "button push-right"  
+    = link_to ( 'Ver todos'), 'allshows', :class => "button push-right"  
