--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -219,7 +219,7 @@ footer {
 }
 
 
-.homebanner {
+.homebanner, .singleshow-banner {
   background: image-url("home_banner.jpg") repeat fixed 0 0 / cover ;
   height: auto;
   padding-bottom: 24px;
