--- a/app/views/static/singleshow.html.haml
+++ b/app/views/static/singleshow.html.haml
@@ -1,1 +1,6 @@
-single show
+%section.main
+  .singleshow-banner{:style => "background-url: '#{ image_path('images/1.jpg') }'"}
+    .row
+      .small-12.medium-6.columns
+        %h1 Lorem Ipsum Dolor Sit Amet
+        %h3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt nulla. Suspendisse in aliquet lacus. Mauris ut purus tincidunt massa bibendum pharetra.
