--- a/app/views/static/singleshow.html.haml
+++ b/app/views/static/singleshow.html.haml
@@ -1,6 +1,19 @@
 %section.main
-  .singleshow-banner{:style => "background-url: '#{ image_path('images/1.jpg') }'"}
+  .singleshow-banner
     .row
       .small-12.medium-6.columns
-        %h1 Lorem Ipsum Dolor Sit Amet
-        %h3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt nulla. Suspendisse in aliquet lacus. Mauris ut purus tincidunt massa bibendum pharetra.
+        %h1 Breaking Bad
+        %ul.rating
+          %li
+            %i.fa.fa-star
+          %li
+            %i.fa.fa-star
+          %li
+            %i.fa.fa-star
+          %li
+            %i.fa.fa-star
+          %li
+            %i.fa.fa-star-o
+        %h3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt nulla. Suspendisse in aliquet lacus. Mauris ut purus tincidunt massa bibendum
+    = render "welcome/latestreviews"
+  .row  
