--- a/app/views/static/singleshow.html.haml
+++ b/app/views/static/singleshow.html.haml
@@ -16,4 +16,18 @@
             %i.fa.fa-star-o
         %h3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt nulla. Suspendisse in aliquet lacus. Mauris ut purus tincidunt massa bibendum
     = render "welcome/latestreviews"
-  .row  
+  .row
+    #disqus_thread
+    :javascript
+      /* * * CONFIGURATION VARIABLES * * */
+      var disqus_shortname = 'srhublinhos';
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
+    %noscript
+      Please enable JavaScript to view the
+      %a{:href => "https://disqus.com/?ref_noscript", :rel => "nofollow"} comments powered by Disqus.
