added review filter by season and episode

--- a/app/views/static/singleshow.html.haml
+++ b/app/views/static/singleshow.html.haml
@@ -15,7 +15,8 @@
           %li
             %i.fa.fa-star-o
         %h3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt nulla. Suspendisse in aliquet lacus. Mauris ut purus tincidunt massa bibendum
-    = render "welcome/latestreviews"
+    / = render "welcome/latestreviews"
+    = render "episodesreviews"
   .row
     #disqus_thread
     :javascript
